# STREAM

./: .gitignore  LICENSE  README.md  allreq.yml  pyproject.toml  requirements.yml  ruff.toml  setup.py
.github/: pull_request_template.md
.github/workflows/: docs.yml  test.yml
docs/: .gitignore  requirements.yml
docs/source/: Contributing.rst  CoupledSprings.ipynb  DecayHeatUsage.ipynb  Examples.rst  Installation.rst  MultiplePlatesInRod.ipynb  PCSCoastdown.ipynb  Parallel thermosyphone driven flow.ipynb  PlanarPendulum.ipynb  SampleFuelPlateAndChannel.ipynb  SeriesRLCCircuit.ipynb  TheCubeProblem.ipynb  aggregator.rst  analysis.rst  calculation.rst  conf.py  decay_heat.rst  heat_transfer_coefficient.rst  index.rst  pressure_drop.rst  quickstart.rst  stream.calculations.rst  stream.composition.rst  stream.physical_models.rst  stream.rst  tests.integration.rst  tests.rst  tests.test_calculations.rst  tests.test_composition.rst  tests.test_general.rst  tests.test_libraries.rst  thresholds.rst  utility_packages.rst
stream/: __init__.py  aggregator.py  calculation.py  jacobians copy.py  jacobians.py  pipe_geometry.py  solvers.py  state.py  units.py  utilities.py
stream/aggregator/: __init__.py  aggregator.py  constraints.py  solution.py  utils.py
stream/analysis/: debugging.py  report.py  thresholds.py
stream/calculations/: __init__.py  channel.py  flapper.py  heat_diffusion.py  kirchhoff.py  point_kinetics.py
stream/composition/: __init__.py  constructors.py  cycle.py  maximal_coupling.py  mtr_geometry.py  (+1 more)
tests/: __init__.py  pytest.ini  requirements.yml
(+64 files in other folders)
